style/module/panel-editor.css
/* 编辑区面板 */
.fn__flex-1.protyle.fullscreen .protyle-content {
  /* 全屏模式编辑区 */
  background-color: var(--custom-editor-background-color);
  backdrop-filter: var(--custom-backdrop-filter);
}
#editor,
.layout-tab-container {
  /* 编辑区 */
  background-color: var(--custom-editor-background-color);
}
#sidebarContainer,
.protyle {
  background: transparent;
}
.wysiwygLoading {
  background-color: transparent !important;
}
.protyle-content[data-fullwidth="true"] > .protyle-background > .protyle-background__iconw {
  /* 文档标志 */
  left: var(--custom-editor-padding-left) !important;
}
.protyle-content[data-fullwidth="true"] > .protyle-title,
.protyle-content[data-fullwidth="true"] > .protyle-wysiwyg {
  margin-left: var(--custom-editor-padding-left) !important;
  margin-right: var(--custom-editor-padding-right) !important;
  padding-left: 0 !important;
  padding-right: 0 !important;
}
.protyle-content > .protyle-title {
  /* 标题 */
}
.protyle-content > .protyle-title .protyle-attr .protyle-attr--refcount {
  /* 块引用计数 */
  background-color: transparent;
  box-shadow: 0 0 var(--custom-toolbar-tiem-active-box-shadow-spread) 0 var(--custom-box-shadow-color);
  z-index: 1;
}
.protyle-content > .protyle-title .protyle-title__input {
  /*编辑区文件名*/
  background: transparent;
}
.protyle-content > .protyle-wysiwyg .protyle-attr .protyle-attr--refcount {
  /* 块引用计数 */
  background-color: transparent;
  box-shadow: 0 0 var(--custom-toolbar-tiem-active-box-shadow-spread) 0 var(--custom-box-shadow-color);
  z-index: 1;
}
.protyle-content > .protyle-wysiwyg .dragover__top {
  box-shadow: 0 -4px 0 var(--custom-drag-top-shadow-color);
}
.protyle-content > .protyle-wysiwyg .dragover__bottom {
  box-shadow: 0 4px 0 var(--custom-drag-bottom-shadow-color);
}
.protyle-content > .protyle-wysiwyg .dragover__left {
  box-shadow: -4px 0 0 var(--custom-drag-left-shadow-color);
}
.protyle-content > .protyle-wysiwyg .dragover__right {
  box-shadow: 4px 0 0 var(--custom-drag-right-shadow-color);
}
.protyle-scroll {
  width: 15px;
  right: 8px;
  margin: 0 4px;
  padding: 0;
}
.protyle-scroll .protyle-scroll__bar {
  right: -98px;
}
.protyle-preview {
  /* 导出预览 */
  background-color: transparent;
  backdrop-filter: none;
}
.protyle-preview .protyle-preview__action {
  /* 预览样式选择栏 */
  background-color: var(--custom-components-deep);
}
.protyle-preview .protyle-preview__action > button {
  /* 预览样式选择按钮 */
  background-color: transparent;
  border-radius: var(--custom-border-radius);
}
.protyle-preview .protyle-preview__action > button:hover {
  /* 鼠标悬浮 */
  background-color: var(--b3-theme-background-light);
}
.protyle-preview > .b3-typography {
  padding-left: var(--custom-editor-padding-left) !important;
  padding-right: var(--custom-editor-padding-right) !important;
}

